# omtp_assignments

./: .gitignore  .gitmodules  README.md
lecture_1/: README.md
lecture_1/omtp_support/: CMakeLists.txt  package.xml
lecture_4/: README.md
lecture_4/Exercise_1/: LearnQDMP.m  Test_CDMP.asv  qDMP_learn.m
lecture_4/Exercise_2/: MoveDMP_Mujoco.m
lecture_4/Exercise_3/: DMP_jmove.m  Test_move_grasp.m
lecture_4/Haptix_models/: LWR_Dependencies.xml  LWR_Load_Chain.xml  LWR_act_pos.xml  LWR_sensorsNew.xml  gripper_Chain.xml
lecture_4/Mujoco_lib/: CCmoveForM.m  ComFT.m  JmoveM.m  MakeT.m  RecMuJoCoData.m  T2QFrame.m  World2Base.m  rot_y.m  rot_z.m
lecture_5/omtp_gazebo/: CMakeLists.txt
lecture_5/omtp_lecture5/: CMakeLists.txt
omtp_factory_behaviors/: README.md
omtp_factory_behaviors/omtp_factory_flexbe_behaviors/: package.xml
omtp_factory_behaviors/omtp_factory_flexbe_behaviors/manifest/: lecture7_pick_and_place_.xml
omtp_factory_behaviors/omtp_factory_flexbe_behaviors/src/omtp_factory_flexbe_behaviors/: lecture7_pick_and_place__sm.py
omtp_factory_behaviors/omtp_factory_flexbe_states/: package.xml
omtp_factory_behaviors/omtp_factory_flexbe_states/src/omtp_factory_flexbe_states/: compute_grasp_state.py  control_feeder_state.py  detect_part_camera_state.py  locate_factory_device_state.py  moveit_to_joints_dyn_state.py  set_conveyor_power_state.py  vacuum_gripper_control_state.py
omtp_gazebo/: package.xml
omtp_gazebo/config/: conveyor_object.yaml  conveyor_objects.yaml
omtp_gazebo/launch/: omtp_environment.launch  omtp_pick_demo.launch  (+2 more)
omtp_lecture1/: README.md
omtp_lecture5/: README.md  package.xml
omtp_lecture5/launch/: lecture5_assignment3.launch  omtp_simple_pick_place.launch
omtp_lecture5/scripts/: lecture5_assignment2_script  lecture5_assignment3.py
omtp_lecture6/: CMakeLists.txt  README.md  package.xml
omtp_lecture6/config/: robot2_object.yaml
omtp_lecture6/launch/: lecture6_assignment1.launch  lecture6_assignment3.launch
omtp_lecture6/scripts/: lecture6_assignment3.py  lecture6_assignment4.py  lecture6_assignment4_robot1.py  lecture6_assignment4_robot2.py  robot_squabblers.py  transform_object_pose.py
omtp_lecture7/: README.md
omtp_lecture8/: README.md
omtp_lecture9/: README.md
omtp_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omtp_support/: CMakeLists.txt  package.xml
omtp_support/config/: omtp.rviz
omtp_support/launch/: load_omtp.launch  visualize_omtp_factory.launch
omtp_support/urdf/: omtp_factory.xacro
omtp_support/urdf/break_beam/: break_beam.urdf.xacro  break_beam.xacro
omtp_support/urdf/logical_camera/: logical_camera.xacro
omtp_support/urdf/robot_system/: robot_system.gazebo.xacro  robot_system.xacro
omtp_support/urdf/vacuum_gripper/: vacuum_gripper.urdf.xacro
omtp_support/urdf/workcell/: workcell.xacro
omtp_utilities/: CMakeLists.txt  package.xml  setup.py
(+116 files in other folders)
