<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture6</name>
  <version>0.0.0</version>
  <description>The omtp_lecture6 package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

</package>
